# Sourcebound

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml
data/dev/: bible_project_profiles.json  bible_sections.json  candidates.json  claim_relationships.json  claims.json  evidence.json  extraction_runs.json  jobs.json  research_findings.json  research_runs.json  review_events.json  source_documents.json  sources.json  text_units.json
docs/: ARCHITECTURE.md  AUTHOR_STACK.md  BIBLE_HANDOFF_WORKFLOW.md  DEMO_CORPUS_WORKFLOW.md  DEPLOYMENT.md  EXTRACTION_EVAL.md  IMPLEMENTATION_BACKLOG.md  ORCHESTRATOR_HANDOFF.md  RELEASE_OPERATIONS.md  ROADMAP.md
docs/adrs/: 0001-modular-monolith.md  0002-wikibase-canonical-store.md  0003-human-review-gate.md  0004-qdrant-is-a-projection.md  0005-auth-boundary-for-trusted-operator.md
docs/ontology/: initial-taxonomy.md
docs/orchestration/: 2026-04-16-track-1-chunk-1.0-task-brief.md  (+68 more)
scripts/: demo_corpus_smoke.sh  newcomer_smoke.sh
tests/: conftest.py  test_adapters.py  test_api_integration.py  test_bible_service.py  test_bible_workspace_service.py  test_cli_benchmark.py  test_cli_intake.py  test_cli_qdrant.py  test_demo_corpus_workflow.py  test_extraction_eval.py  test_health.py  test_intake_service.py  test_job_service.py  test_json_store.py  test_live_integrations.py  test_lore_packet_service.py  test_normalization_service.py  test_pilot_corpus_workflow.py  test_postgres_integration.py  test_query_service.py  test_research_service.py  test_review_flow.py  test_schema_contracts.py
(+81 files in other folders)
